--- a/index.html
+++ b/index.html
@@ -3,42 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Himalaya Cat: The Ultimate Run</title>
+    <title>Himalaya Cat: Masterpiece</title>
     <style>
-        :root { --gold: #FFD700; --red: #ff3333; }
+        :root { --gold: #FFD700; --red: #ff3333; --cyan: #00f2ff; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; font-family: 'Segoe UI', Tahoma, sans-serif; }
+        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; font-family: 'Segoe UI', sans-serif; }
         
-        /* واجهة التحكم */
         #overlay { 
-            position: fixed; inset: 0; background: rgba(0,0,0,0.95); 
+            position: fixed; inset: 0; background: rgba(0,0,0,0.9); 
             z-index: 1000; display: flex; flex-direction: column; align-items: center; justify-content: center;
-            transition: 0.4s;
         }
         .window { 
-            background: linear-gradient(145deg, #101020, #000); padding: 25px; 
-            border-radius: 30px; border: 2px solid var(--gold); text-align: center;
-            width: 90%; max-width: 500px; box-shadow: 0 0 50px rgba(0,0,0,1);
+            background: linear-gradient(145deg, #0a0a1a, #000); padding: 30px; 
+            border-radius: 40px; border: 2px solid var(--gold); text-align: center;
+            width: 90%; max-width: 480px; box-shadow: 0 0 50px rgba(255, 215, 0, 0.15);
         }
         .shop-grid { 
             display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; margin: 15px 0;
-            max-height: 160px; overflow-y: auto; background: rgba(255,255,255,0.05); padding: 10px; border-radius: 15px;
+            max-height: 160px; overflow-y: auto; background: rgba(255,255,255,0.03); padding: 10px; border-radius: 20px;
         }
-        .card { background: #1a1a1a; padding: 10px; border-radius: 12px; border: 1px solid #333; cursor: pointer; font-size: 11px; color: #fff; }
-        .card.active { border: 2px solid var(--gold); background: #332b00; box-shadow: 0 0 15px var(--gold); }
+        .card { background: #111; padding: 10px; border-radius: 12px; border: 1px solid #333; cursor: pointer; font-size: 11px; transition: 0.2s; }
+        .card.active { border-color: var(--gold); background: #221a00; transform: scale(1.05); }
 
         .btn-start { 
             background: var(--gold); color: #000; padding: 18px 60px; border-radius: 50px; 
             border: none; font-size: 24px; font-weight: bold; cursor: pointer; margin-top: 20px;
-            animation: pulse 1.5s infinite;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
         }
-        @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.05); } 100% { transform: scale(1); } }
-
         #hud { 
-            position: fixed; top: env(safe-area-inset-top, 15px); width: 100%; display: flex; justify-content: space-around;
-            z-index: 500; font-weight: bold; color: var(--gold); text-shadow: 2px 2px #000; pointer-events: none;
+            position: fixed; top: 15px; width: 100%; display: flex; justify-content: space-around;
+            z-index: 500; font-weight: bold; color: var(--gold); pointer-events: none;
         }
-        canvas { display: block; width: 100%; height: 100%; touch-action: none; }
+        canvas { display: block; width: 100%; height: 100%; }
     </style>
 </head>
 <body>
@@ -51,147 +47,138 @@
 
 <div id="overlay">
     <div class="window">
-        <h2 style="color:var(--gold); margin:0;" id="m-title">دهليز الهيمالايا الأسطوري</h2>
-        <div class="shop-grid" id="shop-container"></div>
-        <div style="border: 1px dashed var(--red); padding: 12px; border-radius: 20px; background: rgba(255,51,51,0.1);">
-            <p style="margin:0; font-size:13px; color:#fff;">🏥 تبرع لعلاج قطط الهيمالايا ($1)</p>
-            <button onclick="playSFX(300,'sine',0.2); alert('شكراً لشهامتك! تم تسجيل تبرعك ❤️')" style="background:var(--red); border:none; color:white; padding:6px 20px; border-radius:10px; cursor:pointer; margin-top:8px; font-weight:bold;">تبرع الآن</button>
+        <h2 style="color:var(--gold); margin:0;" id="m-title">مهمة إنقاذ الهيمالايا 🐾</h2>
+        <div class="shop-grid" id="shop"></div>
+        <div style="background:rgba(255, 51, 51, 0.05); padding:15px; border-radius:20px; border:1px dashed var(--red);">
+            <p style="margin:0; font-size:13px; color:#fff;">تبرع $1 لدعم القطط المصابة</p>
+            <button onclick="playSFX(200,'sawtooth',0.3)" style="background:var(--red); border:none; color:white; padding:6px 20px; border-radius:10px; cursor:pointer; margin-top:10px; font-weight:bold;">تبرع الآن</button>
         </div>
     </div>
-    <button class="btn-start" onclick="startGame()">ابدأ المغامرة 🚀</button>
+    <button class="btn-start" onclick="start()">بدء اللعب 🚀</button>
 </div>
 
-<canvas id="gameCanvas"></canvas>
-
 <script>
-const canvas = document.getElementById('gameCanvas'), ctx = canvas.getContext('2d');
-const overlay = document.getElementById('overlay'), shop = document.getElementById('shop-container'), mainTitle = document.getElementById('m-title');
+const cvs = document.createElement('canvas');
+document.body.appendChild(cvs);
+const ctx = cvs.getContext('2d');
 
-// الموارد
-const imgCat = new Image(); imgCat.src = 'https://cdn-icons-png.flaticon.com/512/1864/1864514.png';
-const imgObs = new Image(); imgObs.src = 'https://cdn-icons-png.flaticon.com/512/1211/1211053.png';
-const imgCoin = new Image(); imgCoin.src = 'https://cdn-icons-png.flaticon.com/512/2489/2489756.png';
+const imgC = new Image(); imgC.src = 'https://cdn-icons-png.flaticon.com/512/1864/1864514.png';
+const imgM = new Image(); imgM.src = 'https://cdn-icons-png.flaticon.com/512/1211/1211053.png';
+const imgG = new Image(); imgG.src = 'https://cdn-icons-png.flaticon.com/512/2489/2489756.png';
 
-let active = false, stage = 1, coins = 0, distance = 0, frame = 0;
-let obstacles = [], goldList = [];
-let p = { x: 0, y: 0, v: 0, g: 0.45, j: -9.2, w: 70, h: 60 };
+let active = false, stage = 1, score = 0, dist = 0, frame = 0, shake = 0;
+let obs = [], gold = [], pts = [];
+let p = { x: 0, y: 0, v: 0, g: 0.45, j: -9.5, w: 70, h: 60 };
 
-// محرك الصوت (AudioContext)
-const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+const audio = new (window.AudioContext || window.webkitAudioContext)();
 function playSFX(f, t, d) {
-    if(audioCtx.state === 'suspended') audioCtx.resume();
-    let o = audioCtx.createOscillator(), g = audioCtx.createGain();
-    o.type = t; o.frequency.setValueAtTime(f, audioCtx.currentTime);
-    g.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + d);
-    o.connect(g); g.connect(audioCtx.destination); o.start(); o.stop(audioCtx.currentTime + d);
+    if(audio.state === 'suspended') audio.resume();
+    let o = audio.createOscillator(), g = audio.createGain();
+    o.type = t; o.frequency.setValueAtTime(f, audio.currentTime);
+    g.gain.exponentialRampToValueAtTime(0.01, audio.currentTime + d);
+    o.connect(g); g.connect(audio.destination); o.start(); o.stop(audio.currentTime + d);
 }
 
 function resize() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-    p.x = canvas.width * 0.15;
-    if(!active) p.y = canvas.height / 2;
+    cvs.width = window.innerWidth; cvs.height = window.innerHeight;
+    p.x = cvs.width * 0.15;
 }
-window.addEventListener('resize', resize);
-resize();
+window.onresize = resize; resize();
 
-// إنشاء المتاجر الـ 20 غداً سنكمل الـ 18 الباقية
 for(let i=1; i<=20; i++) {
     const d = document.createElement('div');
-    d.className = `card ${i===1?'active':''}`;
-    d.id = `stage-${i}`;
-    d.innerHTML = `متجر ${i}<br><span style="color:var(--gold)">$0.99</span>`;
+    d.className = `card ${i==1?'active':''}`; d.id = `st${i}`;
+    d.innerHTML = `متجر ${i}<br>$0.99`;
     d.onclick = () => {
-        stage = i;
-        document.querySelectorAll('.card').forEach(c => c.classList.remove('active'));
-        d.classList.add('active');
-        playSFX(400, 'sine', 0.1);
+        stage = i; document.querySelectorAll('.card').forEach(c=>c.classList.remove('active'));
+        d.classList.add('active'); playSFX(400, 'sine', 0.1);
     };
-    shop.appendChild(d);
+    document.getElementById('shop').appendChild(d);
 }
 
-function startGame() {
-    active = true; distance = 0; obstacles = []; goldList = []; frame = 0;
-    p.y = canvas.height / 2; p.v = 0;
-    overlay.style.opacity = '0';
-    setTimeout(() => overlay.style.display = 'none', 400);
-    playSFX(200, 'square', 0.5);
-    render();
+function start() {
+    active = true; dist = 0; obs = []; gold = []; pts = []; frame = 0;
+    p.y = cvs.height/2; p.v = 0;
+    document.getElementById('overlay').style.display = 'none';
+    playSFX(150, 'square', 0.5);
+    loop();
 }
 
-function render() {
+function spawnPt(x, y, color) {
+    for(let i=0; i<8; i++) pts.push({x, y, vx: (Math.random()-0.5)*10, vy: (Math.random()-0.5)*10, a: 1, c: color});
+}
+
+function loop() {
     if(!active) return;
-    frame++; distance += 2;
-    document.getElementById('d-val').innerText = Math.floor(distance/10);
+    frame++; dist += 2;
+    document.getElementById('d-val').innerText = Math.floor(dist/10);
     document.getElementById('s-val').innerText = stage;
-    document.getElementById('c-val').innerText = coins;
+    document.getElementById('c-val').innerText = score;
 
-    // خلفية الكهف
-    ctx.fillStyle = '#050510'; ctx.fillRect(0,0,canvas.width, canvas.height);
-    
-    // الدهاليز الصخرية (تتغير ألوانها حسب المرحلة)
-    let wallH = (canvas.height * 0.15) + Math.sin(frame*0.02) * 40;
-    ctx.fillStyle = `hsla(${stage * 50}, 70%, 10%, 1)`;
-    ctx.fillRect(0, 0, canvas.width, wallH); 
-    ctx.fillRect(0, canvas.height - wallH, canvas.width, wallH);
+    ctx.save();
+    if(shake > 0) { ctx.translate(Math.random()*shake, Math.random()*shake); shake *= 0.9; }
 
-    // القطة (حركة حقيقية)
+    // خلفية متدرجة (Gradient)
+    let grd = ctx.createLinearGradient(0, 0, 0, cvs.height);
+    grd.addColorStop(0, "#050510"); grd.addColorStop(1, "#1a0a2e");
+    ctx.fillStyle = grd; ctx.fillRect(0, 0, cvs.width, cvs.height);
+
+    // دهاليز صخرية
+    let wallH = (cvs.height * 0.15) + Math.sin(frame*0.02) * 40;
+    ctx.fillStyle = `hsla(${stage * 50}, 70%, 15%, 0.9)`;
+    ctx.fillRect(0, 0, cvs.width, wallH); ctx.fillRect(0, cvs.height - wallH, cvs.width, wallH);
+
+    // القطة
     p.v += p.g; p.y += p.v;
     ctx.save();
     ctx.translate(p.x + p.w/2, p.y + p.h/2);
-    ctx.scale(-1, 1);
-    ctx.rotate(p.v * 0.03); // إمالة القطة عند القفز والسقوط
-    ctx.drawImage(imgCat, -p.w/2, -p.h/2, p.w, p.h);
+    ctx.scale(-1, 1); ctx.rotate(p.v * 0.03);
+    ctx.drawImage(imgC, -p.w/2, -p.h/2, p.w, p.h);
     ctx.restore();
 
-    // الكوينز (ذهبية حقيقية)
-    if(frame % 90 == 0) goldList.push({x: canvas.width, y: wallH + 50 + Math.random()*(canvas.height - wallH*2 - 100)});
-    goldList.forEach((g, i) => {
-        g.x -= (6 + stage*0.1);
-        ctx.drawImage(imgCoin, g.x, g.y, 35, 35);
+    // الجزيئات (Particles)
+    pts.forEach((pt, i) => {
+        pt.x += pt.vx; pt.y += pt.vy; pt.a -= 0.02;
+        ctx.fillStyle = `rgba(${pt.c}, ${pt.a})`;
+        ctx.fillRect(pt.x, pt.y, 4, 4);
+        if(pt.a <= 0) pts.splice(i, 1);
+    });
+
+    // الذهب
+    if(frame % 90 == 0) gold.push({x: cvs.width, y: wallH + 50 + Math.random()*(cvs.height - wallH*2 - 100)});
+    gold.forEach((g, i) => {
+        g.x -= 6; ctx.drawImage(imgG, g.x, g.y, 35, 35);
         if(Math.hypot(p.x+35-g.x, p.y+30-g.y) < 40) {
-            goldList.splice(i,1); coins++;
-            playSFX(800 + (coins*10), 'sine', 0.1);
+            spawnPt(g.x, g.y, "255, 215, 0");
+            gold.splice(i,1); score++; playSFX(800, 'sine', 0.1);
         }
     });
 
-    // الوحوش الحقيقية
-    if(frame > 100 && frame % Math.max(35, 100 - stage*4) == 0) {
-        obstacles.push({x: canvas.width, y: wallH + Math.random()*(canvas.height - wallH*2 - 80), s: 75});
+    // الوحوش
+    if(frame > 100 && frame % Math.max(30, 100 - stage*4) == 0) {
+        obs.push({x: cvs.width, y: wallH + Math.random()*(cvs.height - wallH*2 - 80), s: 70});
     }
-    obstacles.forEach((o, i) => {
-        o.x -= (7 + stage*0.5);
-        ctx.drawImage(imgObs, o.x, o.y, o.s, o.s);
-        // تصادم دقيق (Hitbox)
-        if(p.x+15 < o.x+o.s-15 && p.x+p.w-15 > o.x+15 && p.y+15 < o.y+o.s-15 && p.y+p.h-15 > o.y+15) gameOver(false);
-        if(o.x < -100) obstacles.splice(i,1);
+    obs.forEach((o, i) => {
+        o.x -= (7 + stage*0.4); ctx.drawImage(imgM, o.x, o.y, o.s, o.s);
+        if(p.x+15 < o.x+o.s-15 && p.x+p.w-15 > o.x+15 && p.y+15 < o.y+o.s-15 && p.y+p.h-15 > o.y+15) end();
+        if(o.x < -100) obs.splice(i, 1);
     });
 
-    // قوانين الخسارة والربح
-    if(p.y < wallH - 20 || p.y > canvas.height - wallH - p.h + 20) gameOver(false);
-    if(distance > 3000) gameOver(true);
+    if(p.y < wallH - 15 || p.y > cvs.height - wallH - p.h + 15) end();
+    if(dist > 3500) { active = false; stage++; document.getElementById('overlay').style.display = 'flex'; }
 
-    requestAnimationFrame(render);
+    ctx.restore();
+    requestAnimationFrame(loop);
 }
 
-function gameOver(win) {
-    active = false;
-    playSFX(win ? 1000 : 80, win ? 'square' : 'sawtooth', 0.6);
-    mainTitle.innerText = win ? "🏆 تم اجتياز الدهليز!" : "💀 سقطت القطة!";
-    mainTitle.style.color = win ? "var(--gold)" : "var(--red)";
-    if(win) stage++;
-    overlay.style.display = 'flex';
-    setTimeout(() => overlay.style.opacity = '1', 50);
+function end() {
+    active = false; shake = 20; playSFX(100, 'sawtooth', 0.6);
+    document.getElementById('m-title').innerText = "💀 سقطت القطة!";
+    document.getElementById('overlay').style.display = 'flex';
 }
 
-// التحكم (لمس أو ماوس)
-const handleAction = (e) => { 
-    if(active) { p.v = p.j; playSFX(600, 'triangle', 0.05); } 
-    if(e) e.preventDefault(); 
-};
-window.addEventListener('mousedown', handleAction);
-window.addEventListener('touchstart', handleAction, {passive: false});
-
+const jump = (e) => { if(active) { p.v = p.j; playSFX(600, 'triangle', 0.1); } if(e) e.preventDefault(); };
+window.onmousedown = jump; window.ontouchstart = jump;
 </script>
 </body>
 </html>
